Codigo Ejemplo/1. Principios Universales de Diseño Software/1.3 Composicion vs Herencia/ejercicio/EmpresaEnvio/src/main/java/org/example/bad/EnvioNacionalStandard.java
package org.example.bad;

public abstract class EnvioNacionalStandard extends EnvioNacional{
    @Override
    public double calcularCostoEnvio() {
        return super.calcularCostoEnvio() + 50;
    }
}

